2006-09-23  Stefan Siegl  <stesie@brokenpipe.de>

	* i386/linux/configure: Regenerate.
	* i386/linux/device-drivers.h.in: Likewise.

	* i386/linux/configure.ac (AC_PCMCIA_OPTION): New function.
	(--disable-pcmcia-isa): New configuration option to disable ISA-bus
	support in the pcmcia core, which is otherwise enabled now by default.
	* doc/mach.texi (Configuration): Briefly document the new configuration
	option.
	* i386/README-Drivers: Likewise.
	
2006-09-20  Thomas Schwinge  <tschwinge@gnu.org>

	* configure: Regenerate.
	* i386/configure: Likewise.
	* i386/linux/configure: Likewise.
	* i386/linux/device-drivers.h.in: Likewise.
	
	* Drivers.macros (AC_DRIVER_ALIAS): Remove definition.
	(AC_DRIVER): Extend to take a `description' parameter and consider
	`$enable_default_device_drivers'.
	(AC_DRIVER_nodef): New definition.
	* configure.in (options kdb, kmsg): Remove redundancy.
	* i386/configure.in (option default-device-drivers): New option.
	(option lpr): Consider `$enable_default_device_drivers'.
	* i386/linux/configure.ac: Rework substantially.  Remove all aliases.
	Rename some of the device driver options.
	(option default-device-drivers): New option.
	(linux_DRIVER): Take care about a `description' parameter and don't
	invoke AC_DRIVER_ALIAS.
	(linux_DRIVER_nodef): New definition.
	Adopt all usages of AC_DRIVER and linux_DRIVER to provide a
	`description' parameter.
	(g_NCR5380, NCR53c406a, eata_dma, wavelan, atp): Change from AC_DRIVER
	to AC_DRIVER_nodef to have these device drivers disabled by default.
	* doc/mach.texi: Add a note about the outdatedness to the configuration
	option table.
	* i386/README-Drivers: Update.
	
2006-09-19  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[bug #17338 --- ``GNU Mach vs. GCC 4.1'']
	* i386/i386/seg.h (struct pseudo_descriptor): Pack structure and
	move the padding field to the end.
	(lgdt): Pass the whole structure to the lgdt assembly command.
	(lidt): Likewise.

2006-08-06  Thomas Schwinge  <tschwinge@gnu.org>
