@@ -1,3 +1,8 @@
+2006-09-25  Stefan Siegl  <stesie@brokenpipe.de>
+
+	* linux/dev/glue/net.c (device_get_status): Reworked to not read
+	from STATUS.  Fill `struct iw_point' correctly if necessary.
+
 2006-09-23  Stefan Siegl  <stesie@brokenpipe.de>
 
 	* i386/linux/configure: Regenerate.
